# dop-rust

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  playground.sh  run.sh
database/: Readme.md
docs/: details.md  docs.md
examples/: demo.rs
examples/thinhnx/: main.rs
src/: engine.rs  lib.rs  main.rs
src/dop/: balances.rs  callback.rs  client.rs  engine.rs  mod.rs  transaction.rs  transfer.rs  tx_decrypt.rs  tx_encrypt.rs  tx_transfer.rs  utils.rs  wallet.rs
tes2t.db/: 000005.ldb  LOG  LOG.old  MANIFEST-000004
test.db/: 000057.ldb  000059.ldb  000062.ldb  000124.ldb  LOG  LOG.old  MANIFEST-000061  MANIFEST-000121
tests/: balance_tests.rs  callback_tests.rs  engine_tests.rs  tx-decrypt_tests.rs  tx-encrypt_tests.rs  tx-transfer_tests.rs  wallet_tests.rs
ts-lib/: .gitignore  package-lock.json  package.json  tsconfig.json
ts-lib/src/: api.ts  engine.ts  index.ts  playground.ts
ts-lib/src/__tests__/: engine.test.ts  index.test.ts
ts-lib/src/api/: balance-api.ts  callback.ts  encrypt.ts  engine-api.ts  index.ts  transaction-api.ts  tx-decrypt.ts  tx-encrypt-api.ts  tx-transfer.ts  wallet-api.ts
ts-lib/src/core/: encrypts.ts  engine.ts  logger.ts  provider.ts  wallet.ts
ts-lib/src/utils/: json.ts
ts-lib/test.db/: 000005.ldb  000007.ldb  000008.ldb  000013.ldb  000018.ldb  000020.ldb  000023.ldb  000026.ldb  000096.ldb  000098.ldb  000101.ldb  000104.ldb  LOG  LOG.old  MANIFEST-000006  MANIFEST-000012  MANIFEST-000022  MANIFEST-000025  MANIFEST-000103
