    [package]
    name = "dop"
    version = "0.1.0"
    edition = "2024"

    [lib]
    name = "dop"
    path = "src/lib.rs"

    [dependencies]
    reqwest = { version = "0.11", features = ["json"] }
    tokio = { version = "1.44.2", features = ["full"] }
    serde_json = "1.0"
    anyhow = "1.0"
    serial_test = "0.5"
warp = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
